--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.1.0",
+    "@mui/material": "^5.13.6",
     "@phosphor-icons/react": "^2.0.9",
     "axios": "^1.3.6",
     "keen-slider": "^6.8.5",
