--- a/.github/workflows/deploy_to_ecr.yml
+++ b/.github/workflows/deploy_to_ecr.yml
@@ -25,7 +25,7 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: vaultoniq_clock
         run: |
-          docker build . --file docker/staging/Dockerfile -t $ECR_REGISTRY/$ECR_REPOSITORY:latest
+          docker build . -t $ECR_REGISTRY/$ECR_REPOSITORY:latest
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
       - name: Update ECS Service
         run: |
