--- a/.github/workflows/deploy_to_ecr.yml
+++ b/.github/workflows/deploy_to_ecr.yml
@@ -2,12 +2,16 @@ name: Deploy to AWS ECR
 
 on:
   push:
-    branches: [ "dev" ]
+    branches:
+      - main
+      - staging
+      - qa
 
 jobs:
-  build:
-    name: Build Image
+  build-production:
+    name: Build Image to production
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
     steps:
       - name: Check out code
         uses: actions/checkout@v3
@@ -29,8 +33,56 @@ jobs:
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
       - name: Update ECS Service
         run: |
-          aws ecs update-service \
-            --cluster ${{ secrets.CLUSTER_NAME }} \
-            --task-definition ${{ secrets.TASK_DEFINITION }} \
-            --service ${{ secrets.SERVICE_NAME }} \
-            --force-new-deployment
+          aws ecs update-service --cluster ${{ secrets.CLUSTER_NAME }} --service ${{ secrets.SERVICE_NAME }} --force-new-deployment
+  build-staging:
+    name: Build Image to staging
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/staging'
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v3
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+      - name: Build, tag, and push image to Amazon ECR
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: vaultoniq_clock_staging
+        run: |
+          docker build . -t $ECR_REGISTRY/$ECR_REPOSITORY:latest
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
+      - name: Update ECS Service
+        run: |
+          aws ecs update-service --cluster vaultoniq_staging --service ${{ secrets.SERVICE_NAME }} --force-new-deployment
+  build-qa:
+    name: Build Image to QA
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/qa'
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v3
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_STAGING }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_STAGING }}
+          aws-region: us-east-1
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+      - name: Build, tag, and push image to Amazon ECR
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: vaultoniq_clock
+        run: |
+          docker build . -t $ECR_REGISTRY/$ECR_REPOSITORY:latest
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
+      - name: Update ECS Service
+        run: |
+          aws ecs update-service --cluster ${{ secrets.CLUSTER_NAME }} --service ${{ secrets.SERVICE_NAME }} --force-new-deployment
