--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.13.6",
     "@phosphor-icons/react": "^2.0.9",
     "axios": "^1.3.6",
+    "flowbite-react": "^0.7.2",
     "keen-slider": "^6.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
