--- a/public/manifest.json
+++ b/public/manifest.json
@@ -20,10 +20,10 @@
   "orientation": "any",
   "icons": [
     {
-      "src": "ms-icon-144x144.png",
-      "sizes": "144x144",
+      "src": "manifest-icon-192.maskable.png",
+      "sizes": "160x160",
       "type": "image/png",
-      "purpose": "any"
+      "purpose": "maskable"
     },
     {
       "src": "manifest-icon-192.maskable.png",
